--- a/index.html
+++ b/index.html
@@ -5,20 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Component Library</title>
+    <!-- <script src="index.css" rel="stylesheet"></script> -->
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 
 <body>
 
 
     <h1>Welcome to Prankurs Component Library</h1>
-    <p>I am attending neogcamp and I want to make a librarry which will make my project look good and consistent</p>
+    <p class="para">I am attending neogcamp and I want to make a librarry which will make my project look good and consistent</p>
     <hr>
     <h2>@typography</h2>
 
     <h1>This is Biggest Heading </h1>
     <h2>This is second Biggest Heading </h2>
     <p>let me show you the normal text,this is free flowing and will wrap at the end like a paragraph</p>
-    <small>This is relatively smaller text <small>
+    <small class="para">This is relatively smaller text <small>
 
             <h2>@containers</h2>
             <h3>Fluid container</h3>
@@ -68,7 +71,7 @@
 <h2>@Section</h2>
 <section>
 <h1>white section</h1>
-<p>This will have white background</p>
+<p class="para">This will have white background</p>
 
 </section>
 <section>
