added fonts in the css sheet

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 
     <h1>Welcome to Prankurs Component Library</h1>
-    <p class="para">I am attending neogcamp and I want to make a librarry which will make my project look good and consistent</p>
+    <p>I am attending neogcamp and I want to make a librarry which will make my project look good and consistent</p>
     <hr>
     <h2>@typography</h2>
 
     <h1>This is Biggest Heading </h1>
     <h2>This is second Biggest Heading </h2>
     <p>let me show you the normal text,this is free flowing and will wrap at the end like a paragraph</p>
-    <small class="para">This is relatively smaller text <small>
+    <small>This is relatively smaller text <small>
 
             <h2>@containers</h2>
             <h3>Fluid container</h3>
@@ -71,7 +71,7 @@
 <h2>@Section</h2>
 <section>
 <h1>white section</h1>
-<p class="para">This will have white background</p>
+<p>This will have white background</p>
 
 </section>
 <section>
