--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
     <small>This is relatively smaller text <small>
 
             <h2>@containers</h2>
+
             <h3>Fluid container</h3>
-            <div>This is a fluid container and it will go till end of the page</div>
+            <div class="container">This is a fluid container and it will go till end of the page</div>
 
             <h3>center container</h3>
-            <div>This is a fluid container and it will go till end of the page</div>
+            <div class="container container-center">This is a centered container and it will go till end of the page</div>
 
             <h2>@Links</h2>
-            <a href="/">Primary Link</a>
-            <a href="/">Secondary Link</a>
+            <a href="/" class="link primary-link">Primary Link</a>
+            <a href="/" class="link secondary-link">Secondary Link</a>
             <hr>
 
             <h2>@Lists</h2>
