added list info and updated link buttons style

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             <hr>
 
             <h2>@Lists</h2>
+            <h3>unordered list</h3>
+            <p>this list won't have the bullet</p>
             <ul>
                 <li>Inline Item one </li>
                 <li>Inline Item two</li>
