--- a/index.html
+++ b/index.html
@@ -39,13 +39,22 @@
             <h2>@Lists</h2>
             <h3>unordered list</h3>
             <p>this list won't have the bullet</p>
-            <ul>
-                <li>Inline Item one </li>
-                <li>Inline Item two</li>
-                <li>Inline Item three</li>
+
+            <ul class="list-non-bullet">
+            <li>item one</li>
+            <li>item two</li>
+            <li>item three</li>
             </ul>
 
-            <ol>
+            <h3>unordered inline list</h3>
+
+            <ul class="list-non-bullet">
+                <li clas="list-item-inline">Inline Item one </li>
+                <li clas="list-item-inline">Inline Item two</li>
+                <li clas="list-item-inline">Inline Item three</li>
+            </ul>
+<h3>reverse ordered list</h3>
+            <ol reversed>
                 <li>Milk</li>
                 <li>Bread</li>
                 <li>Butter</li>
