--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
             <h3>unordered inline list</h3>
 
             <ul class="list-non-bullet">
-                <li clas="list-item-inline">Inline Item one </li>
-                <li clas="list-item-inline">Inline Item two</li>
-                <li clas="list-item-inline">Inline Item three</li>
+                <li class="list-item-inline">Inline Item one </li>
+                <li class="list-item-inline">Inline Item two</li>
+                <li class="list-item-inline">Inline Item three<li>
             </ul>
+
 <h3>reverse ordered list</h3>
             <ol reversed>
                 <li>Milk</li>
