--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Component Library</title>
     <!-- <script src="index.css" rel="stylesheet"></script> -->
     <link rel="stylesheet" href="style.css">
-    
+
 </head>
 
 <body>
@@ -29,7 +29,8 @@
             <div class="container">This is a fluid container and it will go till end of the page</div>
 
             <h3>center container</h3>
-            <div class="container container-center">This is a centered container and it will go till end of the page</div>
+            <div class="container container-center">This is a centered container and it will go till end of the page
+            </div>
 
             <h2>@Links</h2>
             <a href="/" class="link primary-link">Primary Link</a>
@@ -41,9 +42,9 @@
             <p>this list won't have the bullet</p>
 
             <ul class="list-non-bullet">
-            <li>item one</li>
-            <li>item two</li>
-            <li>item three</li>
+                <li>item one</li>
+                <li>item two</li>
+                <li>item three</li>
             </ul>
 
             <h3>unordered inline list</h3>
@@ -51,10 +52,11 @@
             <ul class="list-non-bullet">
                 <li class="list-item-inline">Inline Item one </li>
                 <li class="list-item-inline">Inline Item two</li>
-                <li class="list-item-inline">Inline Item three<li>
+                <li class="list-item-inline">Inline Item three
+                <li>
             </ul>
 
-<h3>reverse ordered list</h3>
+            <h3>reverse ordered list</h3>
             <ol reversed>
                 <li>Milk</li>
                 <li>Bread</li>
@@ -64,43 +66,48 @@
             <hr>
 
             <h2>@Nav</h2>
-            <nav>
-                <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/">Skills</a></li>
-                <li><a href="/">Projects</a></li>
-                <li><a href="/">Contact</a></li>
+            <nav class="navigation container">
+
+                <div class="nav-brand">I am Brand</div>
+
+                <ul class="list-non-bullet nav-pills">
+
+                    <li class="list-item-inline"><a class="navlink link-active" href="/">Home</a></li>
+                    <li class="list-item-inline"><a class="navlink link-active" href="/">Skills</a></li>
+                    <li class="list-item-inline"><a class="navlink link-active" href="/">Projects</a></li>
+                    <li class="list-item-inline"><a class="navlink link-active" href="/">Contact</a></li>
+
                 </ul>
             </nav>
             <hr>
-<h2>@Header</h2>
 
 
-<header>
-    <img src="https://i.ibb.co/SJyK62Z/undraw-Portfolio-update-re-jqnp.png" alt="blank">
-    <p>Heading inside hero</p>
-</header>
-<hr>
-<h2>@Section</h2>
-<section>
-<h1>white section</h1>
-<p>This will have white background</p>
+            <h2>@Header</h2>
+            <header>
+                <img src="https://i.ibb.co/SJyK62Z/undraw-Portfolio-update-re-jqnp.png" alt="blank">
+                <p>Heading inside hero</p>
+            </header>
+            <hr>
+            <h2>@Section</h2>
+            <section>
+                <h1>white section</h1>
+                <p>This will have white background</p>
 
-</section>
-<section>
-    <h1>center section</h1>
-    <p>This will have grey background</p>
-</section>
-<hr>
-<h2>@Footer</h2>
-<footer>
-    <div>Some small heading inside footer</div>
-<ul>
-    <li>social one </li>
-    <li>social two</li>
-    <li>social three</li>
-</ul>
-</footer>
+            </section>
+            <section>
+                <h1>center section</h1>
+                <p>This will have grey background</p>
+            </section>
+            <hr>
+            <h2>@Footer</h2>
+            <footer>
+                <div>Some small heading inside footer</div>
+                <ul>
+                    <li>social one </li>
+                    <li>social two</li>
+                    <li>social three</li>
+                </ul>
+            </footer>
 
 </body>
 
