updated the font fmily and size

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 
 
             <h2>@Header</h2>
-            <header>
-                <img src="https://i.ibb.co/SJyK62Z/undraw-Portfolio-update-re-jqnp.png" alt="blank">
-                <p>Heading inside hero</p>
+            <header class="hero">
+                <img class="hero-image" src="https://i.ibb.co/SJyK62Z/undraw-Portfolio-update-re-jqnp.png" alt="blank">
+                <p class="hero-heading" >Heading inside hero</p>
             </header>
             <hr>
             <h2>@Section</h2>
