--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </ul>
             </nav>
             <hr>
-
+<!-- added the class elements according to the need  -->
 
             <h2>@Header</h2>
             <header class="hero">
