completed section and updated a bit of html

--- a/index.html
+++ b/index.html
@@ -85,18 +85,22 @@
             <h2>@Header</h2>
             <header class="hero">
                 <img class="hero-image" src="https://i.ibb.co/SJyK62Z/undraw-Portfolio-update-re-jqnp.png" alt="blank">
-                <p class="hero-heading" >Heading inside hero</p>
+                <p class="hero-heading" >Adarsh Balika <span class="heading-inverted">Web Developer</span></p>
             </header>
             <hr>
-            <h2>@Section</h2>
-            <section>
-                <h1>white section</h1>
-                <p>This will have white background</p>
 
+            <h2>@Section</h2>
+            <section class="section">
+                <div class="container container-center">
+                <h1>white section</h1>
+                <p>The aim of this area of MDN is not to take you from "beginner" to "expert" but to take you from "beginner" to "comfortable." From there, you should be able to start making your way, learning from the rest of MDN, and other intermediate to advanced resources that assume a lot of previous knowledge.</p>
+            </div>
             </section>
-            <section>
-                <h1>center section</h1>
-                <p>This will have grey background</p>
+            <section class="section ow">
+                <div class="container container-center">
+                <h1>off white section</h1>
+                <p>The aim of this area of MDN is not to take you from "beginner" to "expert" but to take you from "beginner" to "comfortable." From there, you should be able to start making your way, learning from the rest of MDN, and other intermediate to advanced resources that assume a lot of previous knowledge.</p>
+                </div>
             </section>
             <hr>
             <h2>@Footer</h2>
