--- a/index.html
+++ b/index.html
@@ -1,119 +1,26 @@
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Component Library</title>
-    <!-- <script src="index.css" rel="stylesheet"></script> -->
+    <title>home | adarsh balika</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
-
 <body>
+    <nav class="navigation container">
 
+        <div class="nav-brand">I am Developer</div>
 
-    <h1>Welcome to Prankurs Component Library</h1>
-    <p>I am attending neogcamp and I want to make a librarry which will make my project look good and consistent</p>
-    <hr>
-    <h2>@typography</h2>
+        <ul class="list-non-bullet nav-pills">
 
-    <h1>This is Biggest Heading </h1>
-    <h2>This is second Biggest Heading </h2>
-    <p>let me show you the normal text,this is free flowing and will wrap at the end like a paragraph</p>
-    <small>This is relatively smaller text <small>
+            <li class="list-item-inline"><a class="navlink link-active" href="/">Home</a></li>
+            <li class="list-item-inline"><a class="navlink link-active" href="/">project</a></li>
+            <li class="list-item-inline"><a class="navlink link-active" href="/">Projects</a></li>
+            <li class="list-item-inline"><a class="navlink link-active" href="/">Contact</a></li>
 
-            <h2>@containers</h2>
-
-            <h3>Fluid container</h3>
-            <div class="container">This is a fluid container and it will go till end of the page</div>
-
-            <h3>center container</h3>
-            <div class="container container-center">This is a centered container and it will go till end of the page
-            </div>
-
-            <h2>@Links</h2>
-            <a href="/" class="link primary-link">Primary Link</a>
-            <a href="/" class="link secondary-link">Secondary Link</a>
-            <hr>
-
-            <h2>@Lists</h2>
-            <h3>unordered list</h3>
-            <p>this list won't have the bullet</p>
-
-            <ul class="list-non-bullet">
-                <li>item one</li>
-                <li>item two</li>
-                <li>item three</li>
-            </ul>
-
-            <h3>unordered inline list</h3>
-
-            <ul class="list-non-bullet">
-                <li class="list-item-inline">Inline Item one </li>
-                <li class="list-item-inline">Inline Item two</li>
-                <li class="list-item-inline">Inline Item three
-                <li>
-            </ul>
-
-            <h3>reverse ordered list</h3>
-            <ol reversed>
-                <li>Milk</li>
-                <li>Bread</li>
-                <li>Butter</li>
-            </ol>
-            </div>
-            <hr>
-
-            <h2>@Nav</h2>
-            <nav class="navigation container">
-
-                <div class="nav-brand">I am Brand</div>
-
-                <ul class="list-non-bullet nav-pills">
-
-                    <li class="list-item-inline"><a class="navlink link-active" href="/">Home</a></li>
-                    <li class="list-item-inline"><a class="navlink link-active" href="/">Skills</a></li>
-                    <li class="list-item-inline"><a class="navlink link-active" href="/">Projects</a></li>
-                    <li class="list-item-inline"><a class="navlink link-active" href="/">Contact</a></li>
-
-                </ul>
-            </nav>
-            <hr>
-<!-- added the class elements according to the need  -->
-
-            <h2>@Header</h2>
-            <header class="hero">
-                <img class="hero-image" src="https://i.ibb.co/SJyK62Z/undraw-Portfolio-update-re-jqnp.png" alt="blank">
-                <p class="hero-heading" >Adarsh Balika <span class="heading-inverted">Web Developer</span></p>
-            </header>
-            <hr>
-
-            <h2>@Section</h2>
-            <section class="section">
-                <div class="container container-center">
-                <h1>white section</h1>
-                <p>The aim of this area of MDN is not to take you from "beginner" to "expert" but to take you from "beginner" to "comfortable." From there, you should be able to start making your way, learning from the rest of MDN, and other intermediate to advanced resources that assume a lot of previous knowledge.</p>
-            </div>
-            </section>
-            <section class="section ow">
-                <div class="container container-center">
-                <h1>off white section</h1>
-                <p>The aim of this area of MDN is not to take you from "beginner" to "expert" but to take you from "beginner" to "comfortable." From there, you should be able to start making your way, learning from the rest of MDN, and other intermediate to advanced resources that assume a lot of previous knowledge.</p>
-                </div>
-            </section>
-            <hr>
-
-            <h2>@Footer</h2>
-            <footer class="footer">
-                <div class="footer-header" >Some small heading inside footer</div>
-                <ul class="social-links list-non-bullet">
-                    <li class="list-item-inline"><a class="link" href="/">social one</a></li>
-                    <li class="list-item-inline"><a class="link" href="/">social two</a></li>
-                    <li class="list-item-inline"><a class="link" href="/">social three</a></li>
-                </ul>
-            </footer>
-
+        </ul>
+    </nav>
+    
 </body>
-
 </html>
