updated all the components of website and the final code is ready

--- a/index.html
+++ b/index.html
@@ -15,12 +15,48 @@
         <ul class="list-non-bullet nav-pills">
 
             <li class="list-item-inline"><a class="navlink link-active" href="/">Home</a></li>
-            <li class="list-item-inline"><a class="navlink link-active" href="/">project</a></li>
-            <li class="list-item-inline"><a class="navlink link-active" href="/">Projects</a></li>
-            <li class="list-item-inline"><a class="navlink link-active" href="/">Contact</a></li>
+            <li class="list-item-inline"><a class="navlink " href="/projects.html">Project</a></li>
+            <li class="list-item-inline"><a class="navlink " href="/blogs.html">Blogs</a></li>
 
         </ul>
     </nav>
+
+    <header class="hero">
+        <img class="hero-image" src="https://i.ibb.co/SJyK62Z/undraw-Portfolio-update-re-jqnp.png" alt="blank">
+        <p class="hero-heading" >Adarsh Balika <span class="heading-inverted">Web Developer</span></p>
+    </header>
+    <section class="section ow">
+        <div class="container container-center">
+        <h1>Technologies</h1>
+        <p>I am familear with HTML5,CSS3,JS,NodeJs, ReactJS and Web Hosting.<br> Currently I am learning full stack web development with neogcamp.</p>
+        </div>
+        </section>
+        <section class="section">
+            <div class="container container-center">
+            <h1>Projects</h1>
+            <p>I like to showcase my work,thus you can see my projects hosted online.</p>
+            <a href="/" class="link primary-link">See Projects</a>
+            </div>
+</section>
     
+
+<section class="section ow">
+    <div class="container container-center">
+    <h1>Blogs</h1>
+    <p>I am also working on some technical and non technical blogs .I like to document my joureny.</p>
+    <a href="/" class="link primary-link">Read Blogs</a>
+            </div>
+    </div>
+    </section>
+    <footer class="footer">
+        <div class="footer-header" >Online Presence</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline"><a class="link" href="https://github.com/iprankurpandey">Github</a></li>
+            <li class="list-item-inline"><a class="link" href="https://twitter.com/iprankurpandey">Twitter</a></li>
+            <li class="list-item-inline"><a class="link" href="https://linkedin   .com/in/iprankurpandey">Linkedin</a></li>
+        </ul>
+
+    </footer>
+
 </body>
 </html>
