final project is ready ,pushing the completed code

--- a/index.html
+++ b/index.html
@@ -24,30 +24,28 @@
     </nav>
 
     <header class="hero">
-        <img class="hero-image" src="https://i.ibb.co/SJyK62Z/undraw-Portfolio-update-re-jqnp.png" alt="blank">
-        <p class="hero-heading">Adarsh Balika <span class="heading-inverted">Web Developer</span></p>
+        <img class="hero-image" src="https://svgshare.com/i/_97.svg" alt="blank">
+        <p class="hero-heading">Prankur <span class="heading-inverted">Web Developer</span></p>
     </header>
     <section class="section ow">
         <div class="container container-center">
             <h1>Technologies</h1>
-            <p>I am familear with HTML5,CSS3,JS,NodeJs, ReactJS and Web Hosting.<br> Currently I am learning full stack
-                web development with neogcamp.</p>
+            <p>I am familear with <b> HTML5, CSS3, JS, NodeJs, ReactJS, Git-Github, AWS, Linux, Web Hosting.</b>
+            <br> Currently I am learning full stack DevOps along with Web development with neogcamp.</p>
         </div>
     </section>
     <section class="section">
         <div class="container container-center">
             <h1>Projects</h1>
             <p>I like to showcase my work,thus you can see my projects hosted online.</p>
-            <a href="/" class="link primary-link">See Projects</a>
+            <a href="/projects.html" class="link primary-link">See Projects</a>
         </div>
     </section>
-
-
     <section class="section ow">
         <div class="container container-center">
             <h1>Blogs</h1>
             <p>I am also working on some technical and non technical blogs .I like to document my joureny.</p>
-            <a href="/" class="link primary-link">Read Blogs</a>
+            <a href="/blogs.html" class="link primary-link">Read Blogs</a>
         </div>
         </div>
     </section>
