--- a/blogs.html
+++ b/blogs.html
@@ -21,10 +21,40 @@
         </ul>
     </nav>
     <header class="hero">
-
+        <center>
         <p class="hero-heading" >My <span class="heading-inverted">blogs</span></p>
-        <h2>this is your assignment to get <a href="http://neogcamp.com/mark-five">mark five</a></h2>
+        <h2>Read my Blogs  <a href="/blogs.html">on Technology</a></h2></center>
     </header>
-    
+       
+    <section class="section ow">
+        <div class="container container-center">
+            <article>
+            <h1>Blogs I </h1>
+            <p>I am also working on some technical and non technical blogs .I like to document my joureny.</p>
+            <a href="/" class="link primary-link">Read Blogs</a>
+        </div>
+        </div>
+    </section>
+    <section class="section ow">
+        <div class="container container-center">
+            <article>
+            <h1>Blogs II </h1>
+            <p>I am also working on some technical and non technical blogs .I like to document my joureny.</p>
+            <a href="/" class="link primary-link">Read Blogs</a>
+        </div>
+        </div>
+    </article>
+    </section>
+
+    <footer class="footer">
+        <div class="footer-header">Online Presence</div>
+        <ul class="social-links">
+            <li class="list-item-inline"><a class="link" href="https://github.com/iprankurpandey">Github</a></li>
+            <li class="list-item-inline"><a class="link" href="https://twitter.com/iprankurpandey">Twitter</a></li>
+            <li class="list-item-inline"><a class="link" href="https://linkedin.com/in/iprankurpandey">Linkedin</a>
+            </li>
+        </ul>
+
+    </footer>
 </body>
 </html>
