added functional testing skills

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="section ow">
         <div class="container container-center">
             <h1>Technologies</h1>
-            <p>I am familear with <b> HTML5, CSS3, JS, NodeJs, ReactJS, Git-Github, AWS, Linux, Web Hosting.</b>
+            <p>I am familear with <b> HTML5, CSS3, JS, NodeJs, ReactJS, Git-Github, AWS, Linux, Functional & UI Testing &  Web Hosting.</b>
             <br> Currently I am learning full stack DevOps along with Web development with neogcamp.</p>
         </div>
     </section>
