--- a/projects.html
+++ b/projects.html
@@ -75,42 +75,42 @@
                 <p>CLI App built with <strong>node.js</strong>,
                     you can send this to your friend</p>
 
-                <a href="https://replit.com/@iprankurpandey/CLIApp?v=1" class="link primary-link">Live Project</a>
-
-                <a class="link secondary-link" href="https://github.com/iprankurpandey/CLIApp">View Code</a>
+                <a href="https://prankursbananatalkapp.netlify.app/" class="link primary-link">Live Project</a>
+            
+                <a class="link secondary-link" href="https://github.com/iprankurpandey/banana-talk-translater-app-mark-VI">View Code</a>
 
             </div>
             <div class="container container-center">
-                <h2>minion talk -Mark VII</h2>
+                <h2>ferb-latin-translator-Mark-VII</h2>
                 <small>July 2021,08:26PM</small>
                 <p>CLI App built with <strong>node.js</strong>,
                     you can send this to your friend</p>
 
-                <a href="https://replit.com/@iprankurpandey/CLIApp?v=1" class="link primary-link">Live Project</a>
+                <a href="https://prankursferblatinapp.netlify.app/" class="link primary-link">Live Project</a>
 
-                <a class="link secondary-link" href="https://github.com/iprankurpandey/CLIApp">View Code</a>
+                <a class="link secondary-link" href="https://github.com/iprankurpandey/ferb-latin-translator-Mark-VII">View Code</a>
 
             </div>
             <div class="container container-center">
-                <h2>know your emoji -Mark-VIII></h2>
+                <h2>know your emoji -Mark-VIII</h2>
                 <small>July 2021,08:26PM</small>
                 <p>CLI App built with <strong>node.js</strong>,
                     you can send this to your friend</p>
 
-                <a href="https://replit.com/@iprankurpandey/CLIApp?v=1" class="link primary-link">Live Project</a>
+                <a href="https://csb-2y3lf.netlify.app/" class="link primary-link">Live Project</a>
 
-                <a class="link secondary-link" href="https://github.com/iprankurpandey/CLIApp">View Code</a>
+                <a class="link secondary-link" href="https://github.com/iprankurpandey/emoji-React-App-Mark-VIII">View Code</a>
 
             </div>
             <div class="container container-center">
-                <h2>book reccomendation -Mark IX</h2>
+                <h2>book recommendation -Mark IX</h2>
                 <small>July 2021,08:26PM</small>
                 <p>CLI App built with <strong>node.js</strong>,
                     you can send this to your friend</p>
 
-                <a href="https://replit.com/@iprankurpandey/CLIApp?v=1" class="link primary-link">Live Project</a>
+                <a href="https://csb-xe3iq.netlify.app/" class="link primary-link">Live Project</a>
 
-                <a class="link secondary-link" href="https://github.com/iprankurpandey/CLIApp">View Code</a>
+                <a class="link secondary-link" href="https://github.com/iprankurpandey/book-recommendation-react">View Code</a>
 
             </div>
             <div class="container container-center">
