--- a/projects.html
+++ b/projects.html
@@ -119,9 +119,9 @@
                 <p>CLI App built with <strong>node.js</strong>,
                     you can send this to your friend</p>
 
-                <a href="https://replit.com/@iprankurpandey/CLIApp?v=1" class="link primary-link">Live Project</a>
+                <a href="https://prankurscashregister.netlify.app/" class="link primary-link">Live Project</a>
 
-                <a class="link secondary-link" href="https://github.com/iprankurpandey/CLIApp">View Code</a>
+                <a class="link secondary-link" href="https://github.com/iprankurpandey/Cash-Register-App-Mark-X">View Code</a>
 
             </div>
             <div class="container container-center">
@@ -132,7 +132,7 @@
 
                 <a href="https://replit.com/@iprankurpandey/CLIApp?v=1" class="link primary-link">Live Project</a>
 
-                <a class="link secondary-link" href="https://github.com/iprankurpandey/CLIApp">View Code</a>
+                <a class="link secondary-link" href="https://github.com/iprankurpandey/build-is-your-birthday-lucky-Mark-XI">View Code</a>
 
             </div>
             <div class="container container-center">
