added new links and github

--- a/projects.html
+++ b/projects.html
@@ -141,9 +141,9 @@
                 <p>CLI App built with <strong>node.js</strong>,
                     you can send this to your friend</p>
 
-                <a href="https://replit.com/@iprankurpandey/CLIApp?v=1" class="link primary-link">Live Project</a>
+                <a href="https://prankursfunwithtriangles.netlify.app/" class="link primary-link">Live Project</a>
 
-                <a class="link secondary-link" href="https://github.com/iprankurpandey/CLIApp">View Code</a>
+                <a class="link secondary-link" href="https://github.com/iprankurpandey/fun-with-triangles--Mark-XII">View Code</a>
 
             </div>
             <div class="container container-center">
@@ -152,9 +152,9 @@
                 <p>CLI App built with <strong>node.js</strong>,
                     you can send this to your friend</p>
 
-                <a href="https://replit.com/@iprankurpandey/CLIApp?v=1" class="link primary-link">Live Project</a>
+                <a href="https://prankursstockmarketapp.netlify.app/" class="link primary-link">Live Project</a>
 
-                <a class="link secondary-link" href="https://github.com/iprankurpandey/CLIApp">View Code</a>
+                <a class="link secondary-link" href="https://github.com/iprankurpandey/stock-purchase-profit-or-loss-Mark-XIV">View Code</a>
 
             </div>
             <div class="container container-center">
@@ -163,9 +163,9 @@
                 <p>CLI App built with <strong>node.js</strong>,
                     you can send this to your friend</p>
 
-                <a href="https://replit.com/@iprankurpandey/CLIApp?v=1" class="link primary-link">Live Project</a>
+                <a href="https://prankursstockmarketapp.netlify.app/" class="link primary-link">Live Project</a>
 
-                <a class="link secondary-link" href="https://github.com/iprankurpandey/CLIApp">View Code</a>
+                <a class="link secondary-link" href="https://github.com/iprankurpandey/stock-purchase-profit-or-loss-Mark-XIV">View Code</a>
 
             </div>
 
