added blogs link to blog section

--- a/projects.html
+++ b/projects.html
@@ -175,9 +175,9 @@
                 <p>CLI App built with <strong>node.js</strong>,
                     you can send this to your friend</p>
 
-                <a href="https://replit.com/@iprankurpandey/CLIApp?v=1" class="link primary-link">Live Project</a>
+                <a href="blogs.html" class="link primary-link">Live Blogs</a>
 
-                <a class="link secondary-link" href="https://github.com/iprankurpandey/CLIApp">View Code</a>
+                <!-- <a class="link secondary-link" href="https://github.com/iprankurpandey/CLIApp">View Code</a> -->
         </li>
     </ul>
     <footer class="footer">
