added all git links and demo site links

--- a/projects.html
+++ b/projects.html
@@ -130,7 +130,7 @@
                 <p>CLI App built with <strong>node.js</strong>,
                     you can send this to your friend</p>
 
-                <a href="https://replit.com/@iprankurpandey/CLIApp?v=1" class="link primary-link">Live Project</a>
+                <a href="https://prankursluckybday.netlify.app/" class="link primary-link">Live Project</a>
 
                 <a class="link secondary-link" href="https://github.com/iprankurpandey/build-is-your-birthday-lucky-Mark-XI">View Code</a>
 
