--- a/blogs.html
+++ b/blogs.html
@@ -31,7 +31,7 @@
             <article>
             <h1>Blogs I </h1>
             <p>I am also working on some technical and non technical blogs .I like to document my joureny.</p>
-            <a href="/" class="link primary-link">Read Blogs</a>
+            <a href="blog1.html" class="link primary-link">Read Blogs</a>
         </div>
         </div>
     </section>
@@ -40,7 +40,7 @@
             <article>
             <h1>Blogs II </h1>
             <p>I am also working on some technical and non technical blogs .I like to document my joureny.</p>
-            <a href="/" class="link primary-link">Read Blogs</a>
+            <a href="blog2.html" class="link primary-link">Read Blogs</a>
         </div>
         </div>
     </article>
