--- a/blog2.html
+++ b/blog2.html
@@ -20,5 +20,20 @@
 
         </ul>
     </nav>
+
+
+
+
+    <footer class="footer">
+        <div class="footer-header">Online Presence</div>
+        <ul class="social-links">
+            <li class="list-item-inline"><a class="link" href="https://github.com/iprankurpandey">Github</a></li>
+            <li class="list-item-inline"><a class="link" href="https://twitter.com/iprankurpandey">Twitter</a></li>
+            <li class="list-item-inline"><a class="link" href="https://linkedin.com/in/iprankurpandey">Linkedin</a>
+            </li>
+        </ul>
+
+    </footer>
+
 </body>
 </html>
