updated project headings

--- a/projects.html
+++ b/projects.html
@@ -72,8 +72,7 @@
             <div class="container container-center">
                 <h2>banana talk -Mark VI</h2>
                 <small>July 2021,08:26PM</small>
-                <p>CLI App built with <strong>node.js</strong>,
-                    you can send this to your friend</p>
+                <p>a frinedly web app to translate human language into minion language ,technology used JS and funtransalation API</p>
 
                 <a href="https://prankursbananatalkapp.netlify.app/" class="link primary-link">Live Project</a>
             
@@ -83,8 +82,7 @@
             <div class="container container-center">
                 <h2>ferb-latin-translator-Mark-VII</h2>
                 <small>July 2021,08:26PM</small>
-                <p>CLI App built with <strong>node.js</strong>,
-                    you can send this to your friend</p>
+                <p>a frinedly web app to translate human language into minion language ,technology used JS and funtransalation API</p>
 
                 <a href="https://prankursferblatinapp.netlify.app/" class="link primary-link">Live Project</a>
 
@@ -94,8 +92,7 @@
             <div class="container container-center">
                 <h2>know your emoji -Mark-VIII</h2>
                 <small>July 2021,08:26PM</small>
-                <p>CLI App built with <strong>node.js</strong>,
-                    you can send this to your friend</p>
+                <p>a react app to understand the meaning  of emojis which we use in daily life </p>
 
                 <a href="https://csb-2y3lf.netlify.app/" class="link primary-link">Live Project</a>
 
@@ -105,8 +102,7 @@
             <div class="container container-center">
                 <h2>book recommendation -Mark IX</h2>
                 <small>July 2021,08:26PM</small>
-                <p>CLI App built with <strong>node.js</strong>,
-                    you can send this to your friend</p>
+                <p>a react app to show the book recommendations accorind to the theme of the book/p>
 
                 <a href="https://csb-xe3iq.netlify.app/" class="link primary-link">Live Project</a>
 
@@ -116,8 +112,7 @@
             <div class="container container-center">
                 <h2>cash register -Mark X</h2>
                 <small>July 2021,08:26PM</small>
-                <p>CLI App built with <strong>node.js</strong>,
-                    you can send this to your friend</p>
+                <p>have pain while returing changes or calculating amount ,then this app is for you buit using HTML/CSS and JS </p>
 
                 <a href="https://prankurscashregister.netlify.app/" class="link primary-link">Live Project</a>
 
@@ -127,8 +122,7 @@
             <div class="container container-center">
                 <h2>is your birthday lucky -Mark XI</h2>
                 <small>July 2021,08:26PM</small>
-                <p>CLI App built with <strong>node.js</strong>,
-                    you can send this to your friend</p>
+                <p>my birthday is lucky thats it!  are your ready to know about your bday?</p>
 
                 <a href="https://prankursluckybday.netlify.app/" class="link primary-link">Live Project</a>
 
@@ -138,8 +132,7 @@
             <div class="container container-center">
                 <h2>fun with triangles -Mark XII</h2>
                 <small>July 2021,08:26PM</small>
-                <p>CLI App built with <strong>node.js</strong>,
-                    you can send this to your friend</p>
+                <p>solve your complex triangle problems using this app </p>
 
                 <a href="https://prankursfunwithtriangles.netlify.app/" class="link primary-link">Live Project</a>
 
@@ -149,8 +142,7 @@
             <div class="container container-center">
                 <h2>is your birthday palindrome -Mark XIII</h2>
                 <small>July 2021,08:26PM</small>
-                <p>CLI App built with <strong>node.js</strong>,
-                    you can send this to your friend</p>
+                <p>no my bday is not palindrome </p>
 
                 <a href="https://prankurspalindromebdayapp.netlify.app/" class="link primary-link">Live Project</a>
 
@@ -160,8 +152,7 @@
             <div class="container container-center">
                 <h2>stock profit and loss -Mark-XIV</h2>
                 <small>July 2021,08:26PM</small>
-                <p>CLI App built with <strong>node.js</strong>,
-                    you can send this to your friend</p>
+                <p>check your stocks profit and loss status .</p>
 
                 <a href="https://prankursstockmarketapp.netlify.app/" class="link primary-link">Live Project</a>
 
@@ -172,8 +163,7 @@
             <div class="container container-center">
                 <h2>blogs - Mark XV</h2>
                 <small>July 2021,08:26PM</small>
-                <p>CLI App built with <strong>node.js</strong>,
-                    you can send this to your friend</p>
+                <p>read blogs and get knowledge </p>
 
                 <a href="blogs.html" class="link primary-link">Live Blogs</a>
 
