updated book recommendation paragraph

--- a/projects.html
+++ b/projects.html
@@ -102,7 +102,7 @@
             <div class="container container-center">
                 <h2>book recommendation -Mark IX</h2>
                 <small>July 2021,08:26PM</small>
-                <p>a react app to show the book recommendations accorind to the theme of the book/p>
+                <p>a react app to show the book recommendations accorind to the theme of the book</p>
 
                 <a href="https://csb-xe3iq.netlify.app/" class="link primary-link">Live Project</a>
 
