--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
 
     <nav class="navigation container">
 
-        <div class="nav-brand">I am Developer</div>
+        <div class="nav-brand"><a class="navlink" href="index.html">I am Developer</a></div>
 
         <ul class="list-non-bullet nav-pills">
 
