--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hoeme | Prankur's Portfolio</title>
+    <title>Home | Prankur's Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
