--- a/blog1.html
+++ b/blog1.html
@@ -1,41 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <nav class="navigation container">
+      <div class="nav-brand">
+        <a class="navlink" href="index.html">I am Developer</a>
+      </div>
 
-        <div class="nav-brand"><a class="navlink" href="index.html">I am Developer</a></div>
-
-        <ul class="list-non-bullet nav-pills">
-
-            <li class="list-item-inline"><a class="navlink link-active" href="/">Home</a></li>
-            <li class="list-item-inline"><a class="navlink " href="/projects.html">Project</a></li>
-            <li class="list-item-inline"><a class="navlink " href="/blogs.html">Blogs</a></li>
-
-        </ul>
+      <ul class="list-non-bullet nav-pills">
+        <li class="list-item-inline">
+          <a class="navlink link-active" href="/">Home</a>
+        </li>
+        <li class="list-item-inline">
+          <a class="navlink" href="/projects.html">Project</a>
+        </li>
+        <li class="list-item-inline">
+          <a class="navlink" href="/blogs.html">Blogs</a>
+        </li>
+      </ul>
     </nav>
 
+    <p class="description">Enough HTML, CSS, and JS to get started?</p>
 
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br>
+    <article class="blog-center">
+      I always wonder what happens when I type google.com in chrome and it
+      fetches a web page. What is the magic behinds this? Well, I grow and
+      studied computers and finally got to know the answer to my query about web
+      page magic. I got the answer it is the magic of a combined combination of
+      web technologies, That is responsible to fetch the web page in front of
+      your eyes when you type anything in the browser. The combination consists
+      of three fundamental and major web technologies, That are powering the web
+      are:
+      <ul>
 
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+      </ul>
+      I have been personally studying these technologies for a month under the
+      umbrella of NeoG camp and believe me, if anything fascinating after Space
+      exploration, it is web development. Now the question is how much I should
+      know about these technologies o before answering that I would like to
+      clear one very important thing, Stay away from tutorial hell, I had been a
+      victim of this and I ruined my life. Tutorial hell is all about reading
+      many tutorials for the same topic and just reading without experimenting
+      and implementing the actual things. By doing this we might have good
+      knowledge of theory but you won't have practical knowledge. Thanks, NeoG
+      for rescuing me. Now the answer to how much you should know about these
+      technologies completely depends upon your project requirements, Because
+      these are very vast and are updating on a daily basis, so learning in one
+      go and then start developing something of your own will take an ample
+      amount of time. So here are some fundamentals of HTML CSS and JS that will
+      be very useful if you are just starting with the web, Remember you have to
+      make something of your own, even a small calculator program will add value
+      to it. HTML: everyone knows it is a markup language and used to structure
+      the webpage and to do that HTML uses tags (elements), each tag can perform
+      different types of operations in a structure. Here are some of the
+      important tags that will help you to get started with structuring your
+      first web page
+<ul>
+       <li>header</li>
+       <li>footer</li>
+       <li>list</li>
+       <li>navigation</li>
+       <li>table</li>
+       <li>div</li>
+       <li>a-links</li>
+       <li>p-paragraph</li> 
+       <li>forms</li>
+       <li>input</li>
+       <li>class and div</li>
+       <li>semantic HTML</li>
+    </ul>
+
+      If you know these tags then you can easily start structuring your first
+      webpage. Now we have made the structure of the web page it's time to
+      beautify it, to do so will use CSS. CSS – it is used to style the web page
+      elements (tags), We can use this to cover the HTML elements and can give
+      the different types of styles to each element. We can beautify everything
+      related to that element. Here are some of the important CSS properties
+      that will help you to get started with it
+      <ul>
+
+
+        <li>id-class</li>
+        <li>font</li>
+        <li>padding</li>
+        <li>margin</li>
+        <li>border</li>
+        <li>height</li>
+        <li>width</li>
+        <li>colors</li>
+        <li>alignment</li>
+      </ul>
+       
+ 
+      So these are the basic CSS properties that will help you to make your
+      first stylish and beautiful web page. So far we have made a beautiful web
+      page that is very attractive but we want beauty with the brain and our
+      brain is JavaScript. Yes, JavaScript is the brain of web pages because
+      JavaScript has logic and it can issue commands to web elements. Nowadays
+      JavaScript is running everywhere from browsers to servers Here is a list
+      of some basic JavaScript concepts that will be useful to start with web
+      development.
+
+      <p class="list-item-inline"></p>
+      <ul>
+        <li>Operators (only AND, OR,>,<,+,-,*,/,=)</li>
+      
+        <li>
+        Variables</li>
+        <li>Conditions •</li>
+
+        <li>Loops •</li>
+
+        <li>Functions •</li>
+
+        <li>Arrays</li>
+
+        <li>Event listeners</li>
+
+      </ul>
+
+      If you will combine all these tags, styles, and JS concepts you will end
+      up making a good and interactive web page. All the frameworks, libraries
+      are a subset of these web technologies. If you will master these, picking
+      up any new framework and library will be a piece of cake for you. When I
+      started with level zero videos I had zero ideas about web development, Now
+      I can say that I know something about it and the most interesting thing
+      is; I am interested in this domain and the greatest regret is I found it
+      very late.
+    </article>
+    <br />
 
     <footer class="footer">
-        <div class="footer-header">Online Presence</div>
-        <ul class="social-links">
-            <li class="list-item-inline"><a class="link" href="https://github.com/iprankurpandey">Github</a></li>
-            <li class="list-item-inline"><a class="link" href="https://twitter.com/iprankurpandey">Twitter</a></li>
-            <li class="list-item-inline"><a class="link" href="https://linkedin.com/in/iprankurpandey">Linkedin</a>
-            </li>
-        </ul>
-
+      <div class="footer-header">Online Presence</div>
+      <ul class="social-links">
+        <li class="list-item-inline">
+          <a class="link" href="https://github.com/iprankurpandey">Github</a>
+        </li>
+        <li class="list-item-inline">
+          <a class="link" href="https://twitter.com/iprankurpandey">Twitter</a>
+        </li>
+        <li class="list-item-inline">
+          <a class="link" href="https://linkedin.com/in/iprankurpandey"
+            >Linkedin</a
+          >
+        </li>
+      </ul>
     </footer>
-
-</body>
+  </body>
 </html>
