--- a/blogs.html
+++ b/blogs.html
@@ -31,8 +31,8 @@
         <div class="container container-center">
             <article>
             <h1>Blogs I </h1>
-            <p>I am also working on some technical and non technical blogs .I like to document my joureny.</p>
-            <a href="blog1.html" class="link primary-link">Read Blogs</a>
+            <p>it is the magic of a combined combination of web technologies, That is responsible to fetch the web page in front of your eyes when you type anything in the browser.</p>
+            <a href="blog1.html" class="link primary-link">Read more</a>
         </div>
         </div>
     </section>
