--- a/blogs.html
+++ b/blogs.html
@@ -40,7 +40,7 @@
         <div class="container container-center">
             <article>
             <h1>Blogs II </h1>
-            <p>I am also working on some technical and non technical blogs .I like to document my joureny.</p>
+            <p>Have you ever been to a situation where you want to learn something or want to become good at something but you are not able to do this.</p>
             <a href="blog2.html" class="link primary-link">Read Blogs</a>
         </div>
         </div>
