updated mark IX

--- a/projects.html
+++ b/projects.html
@@ -100,7 +100,7 @@
 
             </div>
             <div class="container container-center">
-                <h2>book recommendation -Mark IX</h2>
+                <h2>My Tech Stack -Mark IX</h2>
                 <small>July 2021,08:26PM</small>
                 <p>a react app to show the book recommendations accorind to the theme of the book</p>
 
