updated mark IX

--- a/projects.html
+++ b/projects.html
@@ -94,7 +94,7 @@
                 <small>July 2021,08:26PM</small>
                 <p>a react app to understand the meaning  of emojis which we use in daily life </p>
 
-                <a href="https://csb-2y3lf.netlify.app/" class="link primary-link">Live Project</a>
+                <a href="hthttps://prankurstechstack.netlify.app/" class="link primary-link">Live Project</a>
 
                 <a class="link secondary-link" href="https://github.com/iprankurpandey/emoji-React-App-Mark-VIII">View Code</a>
 
@@ -106,7 +106,7 @@
 
                 <a href="https://csb-xe3iq.netlify.app/" class="link primary-link">Live Project</a>
 
-                <a class="link secondary-link" href="https://github.com/iprankurpandey/book-recommendation-react">View Code</a>
+                <a class="link secondary-link" href="https://github.com/iprankurpandey/my-tech-stack-mark-IX">View Code</a>
 
             </div>
             <div class="container container-center">
