updated mark XI project link

--- a/projects.html
+++ b/projects.html
@@ -104,7 +104,7 @@
                 <small>July 2021,08:26PM</small>
                 <p>a react app to show the book recommendations accorind to the theme of the book</p>
 
-                <a href="https://csb-xe3iq.netlify.app/" class="link primary-link">Live Project</a>
+                <a href="https://prankurstechstack.netlify.app/" class="link primary-link">Live Project</a>
 
                 <a class="link secondary-link" href="https://github.com/iprankurpandey/my-tech-stack-mark-IX">View Code</a>
 
