updated image path

--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
         </ul>
     </nav>
     <header class="hero">
-        <img class="hero-image" src="https://svgshare.com/i/_97.svg" alt="blank">
+        <img class="hero-image" src="image.svg" alt="blank">
         <p class="hero-heading">Prankur's <span class="heading-inverted">Webcode</span></p>
     </header>
     <ul class="list-non-bullet">
