updated image path

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
         </ul>
     </nav>
-
+    <!-- https://svgshare.com/i/_97.svg -->
     <header class="hero">
-        <img class="hero-image" src="https://svgshare.com/i/_97.svg" alt="blank">
+        <img class="hero-image" src="image.svg" alt="https://svgshare.com/i/_97.svg ">
         <p class="hero-heading">Prankur <span class="heading-inverted">Web Developer</span></p>
     </header>
     <section class="section ow">
